GNOME Bugzilla – Bug 736813
typefindelement leaks sticky events upon flush_stop
Last modified: 2014-09-17 16:43:59 UTC
Created attachment 286397 [details] [review] typefindelement: do not leak sticky events in flush_stop typefindelement leaks sticky events upon flush_stop
Review of attachment 286397 [details] [review]: Correct, gst_pad_store_sticky_event will take its own ref.